compiler/testData/asJava/lightClasses/compilationErrors/TopLevelDestructuring.java
public final class TopLevelDestructuringKt {
    private static final int z = 3;

    public static final int getZ() { /* compiled code */ }
}
